--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE <<html>
 <head>
-	<title></title>
+	<title>SUPERMAN</title>
 </head>
 <body>
+	<P>
+		I JUST LOVE TO DANCE AND SING..LALALAL
+	</P>
 
 </body>
 </html>
